objects/LLC_BI__Loan_Collateral2__c.object
<CustomObject>
    <description>Junction object between Loan and Collateral2.</description>
    <fields>
        <fullName>LLC_BI__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field determines if the pledge is active and is automatically set via apex.</description>
        <inlineHelpText>This field determines if the pledge is active and is automatically set via apex.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Advance_Rate_Override__c</fullName>
        <description>This is user updated and required if advanced rate is overridden. The overridden advance rate.</description>
        <inlineHelpText>The overridden advance rate.</inlineHelpText>
        <label>Advance Rate Override</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Advance_Rate__c</fullName>
        <description>This field is manually populated. The percentage of the value of collateral that a lender uses to determine the amount of a loan.</description>
        <formula>IF(
            NOT(ISBLANK(LLC_BI__Advance_Rate_Override__c) || LLC_BI__Advance_Rate_Override__c == 0),
            LLC_BI__Advance_Rate_Override__c,
            IF(
                NOT(ISBLANK(LLC_BI__Auto_Applied_Advance_Rate__c) || LLC_BI__Auto_Applied_Advance_Rate__c == 0),
                LLC_BI__Auto_Applied_Advance_Rate__c,
                LLC_BI__Collateral__r.LLC_BI__Collateral_Type__r.LLC_BI__Advance_Rate__c
            )
        )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage of the value of collateral that a lender uses to determine the amount of a loan.</inlineHelpText>
        <label>Advance Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_Pledged__c</fullName>
        <description>This field is optional and user input. The dollar amount of Collateral that is being pledged against the loan.</description>
        <inlineHelpText>The dollar amount of Collateral that is being pledged against the loan.</inlineHelpText>
        <label>Amount Pledged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Authorize__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This defaults to false. The user must check this box if they are attempting to pledge more than the current lendable value of a piece of collateral to a loan.</description>
        <inlineHelpText>The user must check this box if they are attempting to pledge more than the current lendable value of a piece of collateral to a loan.</inlineHelpText>
        <label>Authorize Pledge Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Auto_Applied_Advance_Rate__c</fullName>
        <description>The system automatically populates this percentage field to set the advance rate for this collateral, based on transactional detail.</description>
        <inlineHelpText>Auto-populated value based on the system administrator’s configuration through matrix manager.</inlineHelpText>
        <label>Auto-Applied Advance Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Full_Address_PE__c</fullName>
        <description>This field is optional and user input. This is the full address for the Collateral. The field should be encrypted using Platform Encryption. The field will only be populated when Platform encryption is enabled for the nCino Platform.</description>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Full_Address__c</fullName>
        <description>This field is optional and user input. This is the full address for the Collateral being looked up to. The field should not be used when Platform Encryption has been enabled for the nCino Platform.</description>
        <formula>LLC_BI__Collateral__r.LLC_BI__Full_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collateral Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Type__c</fullName>
        <description>This field is optional and user input. This is the Type for the Collateral looked up to.</description>
        <formula>LLC_BI__Collateral__r.LLC_BI__Collateral_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collateral Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Value__c</fullName>
        <description>This field is optional and user input. This is a System Generated field from the Value field on the Collateral object. Do not modify.</description>
        <inlineHelpText>This is a System Generated field from the Value field on the Collateral object. Do not modify.</inlineHelpText>
        <label>Collateral Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral__c</fullName>
        <description>This reference field is optional and specifies the collateral pledged to the loan. It is manually populated.</description>
        <label>Collateral</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loan_Collateral2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_Lendable_Value__c</fullName>
        <description>This field is optional and user input. Current Lendable Value of the collateral based on the Advance Rate.</description>
        <inlineHelpText>Current Lendable Value of the collateral based on the Advance Rate.</inlineHelpText>
        <label>Current Lendable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__End_Date__c</fullName>
        <description>This field is optional and user input. The date the loan has been paid out and the piece of Collateral is no longer pledged.</description>
        <inlineHelpText>The date the loan has been paid out and the piece of Collateral is no longer pledged.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__First_Lien_Position_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is optional and user input. The value of the first lien position. This field is populated by the system.</description>
        <inlineHelpText>The value of the first lien position. This field is populated by the system.</inlineHelpText>
        <label>First Lien Position Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Collateral_Count_Rollup_Eligible__c</fullName>
        <description>The system selects this checkbox formula field to determine if collateral should be included in count rollup summaries. If the collateral has a Pledged Status of Active or Pending, the system selects this checkbox. If the collateral has a Pledged Status of Inactive, the system does not select this checkbox.</description>
        <formula>LLC_BI__Active__c || ISPICKVAL(LLC_BI__Pledged_Status__c, &quot;Active&quot;) || ISPICKVAL(LLC_BI__Pledged_Status__c, &quot;Pending&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System-populated field to indicate if collateral is included in count rollup summary.</inlineHelpText>
        <label>Is Collateral Count Rollup Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Collateral_Value_Rollup_Eligible__c</fullName>
        <description>The system selects this checkbox formula field to determine if collateral should be included in value rollup summaries. If the collateral has a Pledged Status of Active or Pending, the system selects this checkbox. If the collateral has a Pledged Status of Inactive, the system does not select this checkbox.</description>
        <formula>LLC_BI__Active__c || ISPICKVAL(LLC_BI__Pledged_Status__c, &quot;Active&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System-populated field to indicate if collateral is included in value rollup summary.</inlineHelpText>
        <label>Is Collateral Value Rollup Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This defaults to false. This field is populated via apex to exclude this pledge from calculations.</description>
        <inlineHelpText>This field is populated via apex to exclude this pledge from calculations.</inlineHelpText>
        <label>Is Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Leased_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This defaults to false. This field is automatically populated via apex to indicate that this collateral is a leased asset.</description>
        <inlineHelpText>This field is automatically populated via apex to indicate that this collateral is a leased asset.</inlineHelpText>
        <label>Is Leased Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field defaults to false. It checks to see if is true on other pledge records for the same piece of collateral. If true on other pledge records, it will not let the user pledge it again as primary because a loan cannot have more than one piece of collateral indicated as primary.</description>
        <inlineHelpText>Is this the primary collateral on the loan.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lien_Position__c</fullName>
        <description>This field is optional and user input. The lien position that will be taken on Collateral.</description>
        <inlineHelpText>The lien position that will be taken on Collateral.</inlineHelpText>
        <label>Lien Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Collateral_Aggregate__c</fullName>
        <description>This field is optional and user input. The aggregate object that connects Collateral to a Loan</description>
        <inlineHelpText>The aggregate object that connects Collateral to a Loan</inlineHelpText>
        <label>Loan Collateral Aggregate</label>
        <referenceTo>LLC_BI__Loan_Collateral_Aggregate__c</referenceTo>
        <relationshipName>Loan_Collateral</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is required and user updated. The Loan that the collateral is related to.</description>
        <inlineHelpText>The Loan that the collateral is related to.</inlineHelpText>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipName>Loan_Collateral</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__LookupKey__c</fullName>
        <label>LookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Original_Lendable_Value__c</fullName>
        <description>This field is optional and user input. The Lendable Value present on the collateral at the time the loan is booked.</description>
        <inlineHelpText>The Lendable Value present on the collateral at the time the loan is booked.</inlineHelpText>
        <label>Original Lendable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Original_Loan_Amount__c</fullName>
        <description>The system automatically populates this field with the original amount of the loan associated to this piece of collateral.</description>
        <inlineHelpText>Displays the original amount of the loan associated to this piece of collateral.</inlineHelpText>
        <label>Original Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Lien_Position_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is optional and user input. The value of the other lien positions. This value is populated by the system.</description>
        <inlineHelpText>The value of the other lien positions. This value is populated by the system.</inlineHelpText>
        <label>Other Lien Position Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Override_Reason__c</fullName>
        <description>This field is optional and user input. The reason for overriding the Advance Rate. This is required if the Advance Rate has been overridden. User updated.</description>
        <inlineHelpText>The reason for overriding the Advance Rate. This is required if the Advance Rate has been overridden.</inlineHelpText>
        <label>Override Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Pledged_Rollup_Count__c</fullName>
        <description>This field is automatically computed. Its value represents this collateral&apos;s (the parent)  total number of child collateral objects (the children) directly pledged to the same loan as this parent collateral.</description>
        <inlineHelpText>This field is automatically computed. Its value represents this collateral&apos;s (the parent)  total number of child collateral objects (the children) directly pledged to the same loan as this parent collateral.</inlineHelpText>
        <label>Pledged Rollup Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Pledged_Status__c</fullName>
        <description>This field is manually selected and specifies the pledge status as either Active (currently being used) or Inactive (no longer being used).</description>
        <inlineHelpText>Manually select the collateral pledge status as either Active (currently being used) or Inactive (no longer being used).</inlineHelpText>
        <label>Pledged Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Second_Lien_Position_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is optional and user input. The value of the second lien position. This field is populated by the system.</description>
        <inlineHelpText>The value of the second lien position. This field is populated by the system.</inlineHelpText>
        <label>Second Lien Position Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>This field is optional and user input. The date the collateral is pledged against a loan.</description>
        <inlineHelpText>The date the collateral is pledged against a loan.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Lien_Position_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is optional and user input. The value of the third lien position. This field is populated by the system.</description>
        <inlineHelpText>The value of the third lien position. This field is populated by the system.</inlineHelpText>
        <label>Third Lien Position Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Pledged_Rollup_Lendable_Value__c</fullName>
        <description>This field is automatically computed. Its value represents the total &apos;lendable&apos; value of all collateral (the children of this collateral) directly pledged to the same loan as this (the parent) piece of collateral.</description>
        <inlineHelpText>This field is automatically computed. Its value represents the total &apos;lendable&apos; value of all collateral (the children of this collateral) directly pledged to the same loan as this (the parent) piece of collateral.</inlineHelpText>
        <label>Total Pledged Rollup Lendable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Pledged_Rollup_Value__c</fullName>
        <description>This field is automatically computed. Its value represents the total &apos;value&apos; of all collateral (the children of this collateral) directly pledged to the same loan as this (the parent) piece of collateral.</description>
        <inlineHelpText>This field is automatically computed. Its value represents the total &apos;value&apos; of all collateral (the children of this collateral) directly pledged to the same loan as this (the parent) piece of collateral.</inlineHelpText>
        <label>Total Pledged Rollup Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Prior_Lien_Amount__c</fullName>
        <description>This field is automatically calculated. The sum of all prior liens.</description>
        <inlineHelpText>The sum of all prior liens.</inlineHelpText>
        <label>Total Prior Lien Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Superior_Lien_Amount__c</fullName>
        <description>This is a required field and automatically updated. Formula to calculate the total superior lien amount. The total amount of all liens with a higher position.</description>
        <formula>CASE(LLC_BI__Lien_Position__c, &apos;1st&apos;, 0, &apos;2nd&apos;,  LLC_BI__Total_Prior_Lien_Amount__c -  LLC_BI__Second_Lien_Position_Value__c - LLC_BI__Third_Lien_Position_Value__c - LLC_BI__Other_Lien_Position_Value__c,&apos;3rd&apos;, LLC_BI__Total_Prior_Lien_Amount__c -  LLC_BI__Third_Lien_Position_Value__c - LLC_BI__Other_Lien_Position_Value__c,&apos;Other&apos;,  LLC_BI__Total_Prior_Lien_Amount__c -  LLC_BI__Other_Lien_Position_Value__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Superior Lien Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Unique_Id__c</fullName>
        <description>This is a System Generated field that ensures uniqueness of Loan_Collateral2__c records.</description>
        <inlineHelpText>This is a System Generated field that ensures uniqueness of Loan_Collateral2__c records.</inlineHelpText>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Collateral Pledged</label>
    <nameField>
        <displayFormat>LC-{00000}</displayFormat>
        <label>Loan Collateral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collateral Pledged</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LLC_BI__Account_Must_Have_Authority</fullName>
        <active>false</active>
        <description>There must be at least one relationship who has pledging authority to pledge against the loan</description>
        <errorConditionFormula>NOT(LLC_BI__Collateral__r.LLC_BI__Has_Authority__c)</errorConditionFormula>
        <errorMessage>There are no relationships related to the collateral who have pledging authority.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Advance_Rate_Override</fullName>
        <active>true</active>
        <description>This validates that if the Advance Rate has been overridden, a comment has been provided.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(LLC_BI__Advance_Rate_Override__c))||(LLC_BI__Advance_Rate_Override__c==0), ISBLANK(LLC_BI__Override_Reason__c))</errorConditionFormula>
        <errorDisplayField>LLC_BI__Override_Reason__c</errorDisplayField>
        <errorMessage>You must specify a reason for overriding the Advance Rate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Pledge_More_Than_Lendable_Value</fullName>
        <active>true</active>
        <description>If the user attempts to pledge an amount greater than the current lendable value, they must check the authorize checkbox.</description>
        <errorConditionFormula>AND(LLC_BI__Amount_Pledged__c &gt; LLC_BI__Current_Lendable_Value__c,  LLC_BI__Authorize__c == false)</errorConditionFormula>
        <errorDisplayField>LLC_BI__Authorize__c</errorDisplayField>
        <errorMessage>You are trying to pledge more than the current lendable value of this collateral. You must check the Authorize Pledge Amount checkbox to continue.</errorMessage>
    </validationRules>
</CustomObject>